2005-09-10  Romain Francoise  <romain@orebokech.com>

	* gnus-uu.el (gnus-message-process-mark): Use gnus-message.
	(gnus-uu-mark-series): Likewise.

2005-09-10  Simon Josefsson  <jas@extundo.com>

	* gnus-agent.el (gnus-agent-synchronize-flags): Make the default
	t, based on discussion on the ding list with Robert Epprecht
	<epprecht@solnet.ch>.

2005-09-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-gmane): Make it work without
	X-Report-Spam header.  Gmane now only provides Archived-At.  This
	is only used if `spam-report-gmane-use-article-number' is nil.
	(spam-report-gmane-spam-header): Removed.  Not used anymore.

	* gnus-sum.el (gnus-thread-sort-by-recipient): New function to
	make `gnus-summary-sort-by-recipient' work with threading.

	* nnweb.el (nnweb-google-wash-article): Print a message if article
	is not available.

2005-09-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-art.el (gnus-mime-display-single): Revert 2004-10-07
	change.  Decode text/* parts content before displaying.

2005-09-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml-smime.el: Remove defvar of gnus-extract-address-components.

2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Disable support modes.

	* lpath.el: Don't bind mc-pgp-always-sign, url-current-object,
	url-package-name, url-package-version,
	w3m-cid-retrieve-function-alist, w3m-current-buffer,
	w3m-display-inline-images, and w3m-minor-mode-map.

2005-09-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-tab-body-function): Fixed mismatched custom
	type.

	* gnus.el (gnus-group-change-level-function): Ditto.

	* gnus-msg.el (gnus-outgoing-message-group): Ditto.

	* gnus-art.el (gnus-signature-limit)
	(gnus-article-mime-part-function): Ditto.

2005-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-mode): Silence the byte compiler.

	* gnus-art.el (gnus-article-jump-to-part): Redisplay the article