@@ -1,3 +1,9 @@
+2005-09-11  Romain Francoise  <romain@orebokech.com>
+
+	* gnus-uu.el (gnus-uu-mark-series): Return number of marked
+	articles.  New argument `silent'.
+	(gnus-uu-mark-all): Report the total number of marked articles.
+
 2005-09-10  Romain Francoise  <romain@orebokech.com>
 
 	* gnus-uu.el (gnus-message-process-mark): Use gnus-message.
